# MEDIALpy

./: LICENSE  MANIFEST.in  MANIFEST.ini  README.md  setup.cfg  setup.py  test.py
.github/workflows/: python-app.yml  python-package.yml
medialpy/: __init__.py  __version__.py
tests/: test_medialpy.py
