[metadata]
name = medialpy
author = KeironO
author_email = keiron.oshea@wales.nhs.uk
description = MEDIcal Abbreviations Lookup in Python.
version = 0.0.1
url = https://github.com/AberystwythSystemsBiology/medialpy
classifiers =
  Development Status :: 1 - Planning
  Intended Audience :: Science/Research
  Intended Audience :: Developers
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Scientific/Engineering :: Medical Science Apps.
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
[options]
python_requires = >= 3.6
setup_requires =
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
include_package_data = True
packages = find: